@@ -1,3 +1,10 @@
+2017-03-30  Zan Dobersek  <zdobersek@igalia.com>
+
+        Unreviewed GTK+ build fix. Add missing ANGLE build targets
+        to the build.
+
+        * CMakeLists.txt:
+
 2017-03-30  Simon Fraser  <simon.fraser@apple.com>
 
         Ensure that Node::willBeDeletedFrom() always removes touch event handlers from the document
